--- a/css/BMS.css
+++ b/css/BMS.css
@@ -1,7 +1,7 @@
 body {
     margin: 0;
     color: white;
-    1font-family: 'Oleo Script', cursive;
+    /*font-family: 'Oleo Script', cursive;*/
 }
 .main {
     background: black;
