--- a/css/BMS.css
+++ b/css/BMS.css
@@ -2,6 +2,7 @@ body {
     margin: 0;
     color: white;
     /*font-family: 'Oleo Script', cursive;*/
+    /*font-family: 'Oleo Script', cursive;*/
 }
 .main {
     background: black;
