--- a/css/BMS.css
+++ b/css/BMS.css
@@ -615,24 +615,24 @@ and (-webkit-min-device-pixel-ratio: 3) {
         font-size: 50px;
     }
     .aboutUs {
-        font-size: 40px;
+        font-size: 45px;
     }
     .aboutUsWrap {
         background-size: cover;
         margin-bottom: 75px;
     }
     .aboutUs h2 {
-        font-size: 60px;
+        font-size: 55px;
 
     }
     .aboutUs h2 span {
-        font-size: 60px;
+        font-size: 55px;
     }
     .aboutWork {
         background: url("../img/girl2.jpg") repeat-y center;
     }
     .colWrap {
-        font-size: 50px;
+        font-size: 45px;
         flex-direction: column;
         text-align: center;
     }
@@ -663,7 +663,7 @@ and (-webkit-min-device-pixel-ratio: 3) {
         margin-bottom: 60px;
     }
     .advantagesWrap h3 {
-        font-size: 60px;
+        font-size: 55px;
         width: auto;
         background: url(../img/Gold.jpg) -1102px 275px;
         -webkit-background-clip: text;
@@ -674,6 +674,7 @@ and (-webkit-min-device-pixel-ratio: 3) {
     }
     .advantage {
         width: auto;
+        font-size: 45px;
     }
     .goldenLady {
         display: none;
@@ -690,10 +691,11 @@ and (-webkit-min-device-pixel-ratio: 3) {
     }
     .interest h3 {
         width: auto;
-        font-size: 60px;
+        font-size: 55px;
     }
     .interestWidth {
         width: 50%;
+        font-size: 55px;
     }
     .interestWidth p {
         font-size: 50px;
@@ -701,6 +703,7 @@ and (-webkit-min-device-pixel-ratio: 3) {
     }
     .interestWidth span {
         font-size: 80px;
+        margin-top: 25px;
     }
     .girlHair {
         display: none;
@@ -708,10 +711,14 @@ and (-webkit-min-device-pixel-ratio: 3) {
     .termsWrap {
         padding: 0 55px;
         width: auto;
+        font-size: 40px;
+    }
+    .termsWrap h3 {
+        font-size: 55px;
     }
     .earn {
         display: block;
-        font-size: 60px;
+        font-size: 70px;
         margin-bottom: 25px;
     }
     .telegram {
@@ -755,9 +762,9 @@ and (-webkit-min-device-pixel-ratio: 3) {
         font-size: 60px;
         height: auto;
         margin: 0 50px;
-        transform: scale(7);
-        -ms-transform: scale(7);
-        -webkit-transform: scale(7);
+        transform: scale(2);
+        -ms-transform: scale(2);
+        -webkit-transform: scale(2);
         padding: 10px;
     }
     .sms {
@@ -839,24 +846,24 @@ and (-webkit-min-device-pixel-ratio: 2) {
         font-size: 50px;
     }
     .aboutUs {
-        font-size: 40px;
+        font-size: 45px;
     }
     .aboutUsWrap {
         background-size: cover;
         margin-bottom: 75px;
     }
     .aboutUs h2 {
-        font-size: 60px;
+        font-size: 55px;
 
     }
     .aboutUs h2 span {
-        font-size: 60px;
+        font-size: 55px;
     }
     .aboutWork {
         background: url("../img/girl2.jpg") repeat-y center;
     }
     .colWrap {
-        font-size: 50px;
+        font-size: 45px;
         flex-direction: column;
         text-align: center;
     }
@@ -887,7 +894,7 @@ and (-webkit-min-device-pixel-ratio: 2) {
         margin-bottom: 60px;
     }
     .advantagesWrap h3 {
-        font-size: 60px;
+        font-size: 55px;
         width: auto;
         background: url(../img/Gold.jpg) -1102px 275px;
         -webkit-background-clip: text;
@@ -898,6 +905,7 @@ and (-webkit-min-device-pixel-ratio: 2) {
     }
     .advantage {
         width: auto;
+        font-size: 45px;
     }
     .goldenLady {
         display: none;
@@ -914,10 +922,11 @@ and (-webkit-min-device-pixel-ratio: 2) {
     }
     .interest h3 {
         width: auto;
-        font-size: 60px;
+        font-size: 55px;
     }
     .interestWidth {
         width: 50%;
+        font-size: 55px;
     }
     .interestWidth p {
         font-size: 50px;
@@ -925,6 +934,7 @@ and (-webkit-min-device-pixel-ratio: 2) {
     }
     .interestWidth span {
         font-size: 80px;
+        margin-top: 25px;
     }
     .girlHair {
         display: none;
@@ -932,10 +942,14 @@ and (-webkit-min-device-pixel-ratio: 2) {
     .termsWrap {
         padding: 0 55px;
         width: auto;
+        font-size: 40px;
+    }
+    .termsWrap h3 {
+        font-size: 55px;
     }
     .earn {
         display: block;
-        font-size: 60px;
+        font-size: 70px;
         margin-bottom: 25px;
     }
     .telegram {
@@ -979,9 +993,9 @@ and (-webkit-min-device-pixel-ratio: 2) {
         font-size: 60px;
         height: auto;
         margin: 0 50px;
-        transform: scale(7);
-        -ms-transform: scale(7);
-        -webkit-transform: scale(7);
+        transform: scale(2);
+        -ms-transform: scale(2);
+        -webkit-transform: scale(2);
         padding: 10px;
     }
     .sms {
