--- a/css/BMS.css
+++ b/css/BMS.css
@@ -732,6 +732,12 @@ and (-webkit-min-device-pixel-ratio: 3) {
         border-radius: 50%;
         padding: 25px;
     }
+    .contact h2 {
+        font-size: 55px;
+    }
+    .contact p {
+        font-size: 45px;
+    }
     .formWrap {
         display: block;
         text-align: center;
@@ -962,6 +968,12 @@ and (-webkit-min-device-pixel-ratio: 2) {
         border: solid 17px deepskyblue;
         border-radius: 50%;
         padding: 25px;
+    }
+    .contact h2 {
+        font-size: 55px;
+    }
+    .contact p {
+        font-size: 45px;
     }
     .formWrap {
         display: block;
