--- a/css/BMS.css
+++ b/css/BMS.css
@@ -2,7 +2,7 @@ body {
     margin: 0;
     color: white;
     /*font-family: 'Oleo Script', cursive;*/
-    font-family: 'Playball', cursive;
+    /*font-family: 'Playball', cursive;*/
 }
 .main {
     background: black;
@@ -651,6 +651,12 @@ and (-webkit-min-device-pixel-ratio: 3) {
     .logo {
         font-size: 90px;
     }
+    .logo:before {
+        width: 80px;
+        height: 80px;
+        top: 15px;
+        left: -95px;
+    }
     .sideMenu {
         margin-top: 20px;
         width: 110px;
@@ -667,9 +673,9 @@ and (-webkit-min-device-pixel-ratio: 3) {
         display: none;
     }
     .apply {
-        width: 550px;
+        width: 700px;
         padding: 25px 30px;
-        font-size: 50px;
+        font-size: 60px;
     }
     .aboutUs {
         font-size: 45px;
@@ -687,6 +693,9 @@ and (-webkit-min-device-pixel-ratio: 3) {
     }
     .aboutWork {
         background: url("../img/girl2.jpg") repeat-y center;
+    }
+    .aboutWork .colWrap .position{
+        text-align: center;
     }
     .colWrap {
         font-size: 45px;
@@ -852,6 +861,9 @@ and (-webkit-min-device-pixel-ratio: 3) {
     .ourServices {
         display: none;
     }
+    .atention {
+        width: auto;
+    }
     .atention p {
         font-size: 30px;
         padding-bottom: 25px;
@@ -869,12 +881,14 @@ and (-webkit-min-device-pixel-ratio: 3) {
         display: block;
         padding-bottom: 25px;
         font-size: 45px;
-        border-bottom: solid 5px dimgrey;
+        margin-top: 55px;
     }
     .footerNetwork {
         font-size: 45px;
-        border-bottom: solid 5px dimgrey;
-        padding-bottom: 25px;
+        border-top: solid 2px dimgrey;
+        border-bottom: solid 2px dimgrey;
+        padding: 30px 0;
+        margin-bottom: 30px;
     }
     .license {
         font-size: 37px;
@@ -891,6 +905,12 @@ and (-webkit-min-device-pixel-ratio: 2) {
     .logo {
         font-size: 90px;
     }
+    .logo:before {
+        width: 80px;
+        height: 80px;
+        top: 15px;
+        left: -95px;
+    }
     .sideMenu {
         margin-top: 20px;
         width: 110px;
@@ -907,9 +927,9 @@ and (-webkit-min-device-pixel-ratio: 2) {
         display: none;
     }
     .apply {
-        width: 550px;
+        width: 700px;
         padding: 25px 30px;
-        font-size: 50px;
+        font-size: 60px;
     }
     .aboutUs {
         font-size: 45px;
@@ -927,6 +947,9 @@ and (-webkit-min-device-pixel-ratio: 2) {
     }
     .aboutWork {
         background: url("../img/girl2.jpg") repeat-y center;
+    }
+    .aboutWork .colWrap .position{
+        text-align: center;
     }
     .colWrap {
         font-size: 45px;
@@ -1092,6 +1115,9 @@ and (-webkit-min-device-pixel-ratio: 2) {
     .ourServices {
         display: none;
     }
+    .atention {
+        width: auto;
+    }
     .atention p {
         font-size: 30px;
         padding-bottom: 25px;
@@ -1109,12 +1135,14 @@ and (-webkit-min-device-pixel-ratio: 2) {
         display: block;
         padding-bottom: 25px;
         font-size: 45px;
-        border-bottom: solid 5px dimgrey;
+        margin-top: 55px;
     }
     .footerNetwork {
         font-size: 45px;
-        border-bottom: solid 5px dimgrey;
-        padding-bottom: 25px;
+        border-top: solid 2px dimgrey;
+        border-bottom: solid 2px dimgrey;
+        padding: 30px 0;
+        margin-bottom: 30px;
     }
     .license {
         font-size: 37px;
