--- a/css/BMS.css
+++ b/css/BMS.css
@@ -53,6 +53,9 @@ body {
 .logo a {
     color: white;
     text-decoration: none;
+    background: url(../img/background.png) 155px 0;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
 }
 .logo:hover {
     cursor: pointer;
@@ -215,8 +218,14 @@ and (-webkit-min-device-pixel-ratio: 2) {
     border: none;
     border-radius: 50px;
     background: url(../img/background.png);
+    background-size: cover;
     margin: 0 auto;
 
+
+}
+.apply a {
+    text-decoration: none;
+    color: white;
     animation-duration: 1s;
     animation-name: apply;
     animation-direction: alternate;
@@ -233,6 +242,9 @@ and (-webkit-min-device-pixel-ratio: 2) {
 }
 .apply:hover {
     background: url(../img/Gold.jpg) -320px 250px;
+    animation-name: a;
+}
+.apply a:hover {
     animation-name: a;
 }
 .aboutWork {
@@ -626,6 +638,7 @@ textarea {
     flex-wrap: wrap;
     font-size: 18px;
     padding-bottom: 25px;
+    border-bottom: 1px solid dimgrey;
 }
 .footerWrap ul {
     list-style: none;
@@ -645,6 +658,30 @@ textarea {
     width: 400px;
     text-align: center;
 }
+.ourContacts {
+    display: flex;
+    flex-direction: column;
+    margin: 0 auto;
+    font-size: 18px;
+    padding-bottom: 25px;
+}
+.ourContacts h2 {
+    margin: 15px auto;
+}
+.city {
+    margin: 0 auto;
+}
+.btnContact {
+    margin-top: 10px;
+    font-size: 14px;
+}
+.btnContact a {
+    text-decoration: none;
+    color: white;
+}
+.btnContact a:hover {
+    color: white;
+}
 .footerNetwork {
     display: flex;
     justify-content: center;
@@ -661,6 +698,9 @@ textarea {
     text-align: center;
     margin-bottom: 25px;
 }
+.mail {
+    margin: 0 auto;
+}
 .mail a:hover {
     color: gold;
 }
@@ -670,8 +710,8 @@ textarea {
 
 .mobSideMenu {
     position: fixed;
-    top: 0;
-    right: 0;
+    top: -1570px;
+    right: -1600px;
     text-align: right;
     z-index: 8;
     background: url("../img/backgroundAbout3.jpg");
@@ -947,15 +987,26 @@ and (-webkit-min-device-pixel-ratio: 3) {
         margin-top: 70px;
     }
     .footerNetwork {
-        font-size: 45px;
+        font-size: 55px;
         border-top: solid 2px dimgrey;
         border-bottom: solid 2px dimgrey;
         padding: 30px 0;
         margin-bottom: 30px;
     }
-    .license {
-        font-size: 37px;
-        padding: 0 50px;
+    .ourContactCol {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+    }
+    .ourContactCol a {
+        display: block;
+        margin: 0 auto;
+        font-size: 50px;
+    }
+    .btnContact {
+        font-size: 40px;
+        width: auto;
+        margin-bottom: 35px;
     }
     .content {
         padding-top: 250px;
@@ -1229,7 +1280,7 @@ and (-webkit-min-device-pixel-ratio: 2) {
         margin-top: 70px;
     }
     .footerNetwork {
-        font-size: 45px;
+        font-size: 55px;
         border-top: solid 2px dimgrey;
         border-bottom: solid 2px dimgrey;
         padding: 30px 0;
@@ -1238,6 +1289,21 @@ and (-webkit-min-device-pixel-ratio: 2) {
     .license {
         font-size: 37px;
         padding: 0 50px;
+    }
+    .ourContactCol {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+    }
+    .ourContactCol a {
+        display: block;
+        margin: 0 auto;
+        font-size: 50px;
+    }
+    .btnContact {
+        font-size: 40px;
+        width: auto;
+        margin-bottom: 35px;
     }
     .content {
         padding-top: 250px;
