--- a/css/BMS.css
+++ b/css/BMS.css
@@ -2,7 +2,7 @@ body {
     margin: 0;
     color: white;
     /*font-family: 'Oleo Script', cursive;*/
-    font-family: 'Playball', cursive;
+    /*font-family: 'Playball', cursive;*/
 }
 .main {
     background: black;
